--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Whatsapp Clone</string>
+    <string name="app_name">Whatsapp</string>
 
     <!-- region title menu-->
     <string name="menu_logout">Logout</string>
@@ -34,5 +34,6 @@
 Fragment</string>
     <string name="cont_hello_status_list_fragment">Hello Status fragment</string>
     <string name="cont_hello_chats_fragment">Hello Chats fragment</string>
+    <string name="hello_blank_fragment">Hello blank fragment</string>
     <!-- endregion-->
 </resources>
